2006-08-22  Per Abrahamsen  <abraham@dina.kvl.dk>

	* lib/potato.dai ("Potato; FertOrgaNic"): New base parameterization.
	("Potato; Agria", "Potato; Folva", "Potato; Triada"): New
	parameterizations.
	(Potato): Changed default to Folva.

2006-07-31  Per Abrahamsen  <abraham@dina.kvl.dk>

	* Version 4.08 released.

2006-07-27  Per Abrahamsen  <abraham@dina.kvl.dk>

	* parser_file.C (add_derived): Shorthand for defining 'const'
	numbers and integers. 
	(load_derived): Shorthand for specifying 'const' numbers and
	integers. 

2006-07-26  Per Abrahamsen  <abraham@dina.kvl.dk>

	* parser_file.C (get_time): Removed unused function.

2006-07-17  Per Abrahamsen  <abraham@dina.kvl.dk>

	* Version 4.07 released.

2006-07-17  Per Abrahamsen  <abraham@dina.kvl.dk>

	* action_table.C: New "Emerging" column.
	* action_harvest.C: Added "emerge" action.
	* field.h, field.C (emerge): New operation.
	* column.h, column_std.C (emerge): Ditto.
	* vegetation.h, vegetation_permanent.C
	* vegetation_crops.C (emerge): Ditto.
	* crop_sold.C, crop_old.C, crop_std.C, crop_simple.C:
	* crop.h (emerge): Ditto.

2006-07-15  Per Abrahamsen  <abraham@dina.kvl.dk>

	* parser_file.C, parser_file.h, parser.h (check): New virtual
	member function.
	(load_list): Use it.

2006-07-05  Per Abrahamsen  <abraham@dina.kvl.dk>

	* Version 4.06 released.

2006-07-05  Per Abrahamsen  <abraham@dina.kvl.dk>

	* sample/log-sample.dai ("Sample water content"): Fixed spec.

	* parser_file.C (load_list): Handle fixed size object sequences.
	(load_list): Handle sequence valued variables.

2006-07-04  Per Abrahamsen  <abraham@dina.kvl.dk>

	* parser_file.C (load_derived): Handle '$' variables.

2006-07-03  Per Abrahamsen  <abraham@dina.kvl.dk>

	* lib/log.dai, lib/log-std.dai: Cleaned up specs.

	* Version 4.05 released.

2006-07-03  Per Abrahamsen  <abraham@dina.kvl.dk>

	* geometry.C (initialize_layer): Don't assume array is large
	enough to hold all cells.

2006-06-28  Per Abrahamsen  <abraham@dina.kvl.dk>
