@@ -463,10 +463,6 @@ LogAList::output (symbol name, const PLF& value)
     alist ().add (sname, value);
 }
 
-void				// Obsolete.
-LogAList::output (symbol, const Time&)
-{ }
-
 bool
 LogAList::check (const Border&, Treelog&) const
 { return true; }
